--- a/index-debug.html
+++ b/index-debug.html
@@ -25,7 +25,7 @@
         <link rel="apple-touch-icon" href="Resources/icon.png">
         <link rel="apple-touch-startup-image" href="Resources/default.png">
 
-        <title>capp-demos</title>
+        <title>Cappuccino Demos</title>
 
         <!-- Custom javascript goes here -->
         <!-- End custom javascript -->
